Used getFirst() method added in Java 21